src/app/home/home.css
.home-main {
  margin: 0 auto;
  padding: 1rem;
  color: #1a202c;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.profile-section {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
}
.display-picture {
  margin: 2rem auto;
  border-radius: 20px;
  overflow: hidden;
  width: 30%;
  /* filter: blur(10px); */
}
.profile-img {
  object-fit: cover;
  border-radius: 20px;
  margin-bottom: 0;
  display: block;
  max-height: 500px;
}
.profile-text {
  width: 70%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.profile-text h1 {
  font-size: 3rem;
  font-weight: 800;
  margin-bottom: 0.5rem;
}
.profile-text h2 {
  font-size: 1.25rem;
}
.profile-text p {
  width: 90%;
  margin: 2rem 1rem;
  font-size: 1rem;
  text-align: justify;
}
.side-content {
  max-width: 80%;
  display: flex;
  gap: 2rem;
  align-items: center;
}
.side-content p {
  width: 60%;
  margin-top: 0;
}
.profile-interests {
  width: 40%;
  display: flex;
  flex-direction: column;
  font-size: 1.25rem;
  color: #4b5563;
}
.profile-interests ul {
  list-style: disc;
  margin: auto;
}
.profile-interests span {
  margin-bottom: 1rem;
  text-align: center;
}
.skills-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.skills-title {
  font-size: 2rem;
  font-weight: 700;
  margin-bottom: 1rem;
}
.skills-list {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: center;
  list-style: none;
  padding: 0;
}
.skills-list li {
  background: #e5e7eb;
  padding: 0.5rem 1rem;
  margin-bottom: 1rem;
  text-align: center;
  border: 1px solid transparent;
}

.skills-list li:hover {
  background: #d1d5db;
  cursor: pointer;
  border: 1px solid #9ca3af;
}

